--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -66,5 +66,6 @@
 	<string name="title_edit_direction">Edit direction</string>
 	<string name="err_sr_deprecated">Games can only be saved/restored from the menu!</string>
 	<string name="msg_file_copied_you_may_delete_the_original_now">File copied. You may delete the original now.</string>
+	<string name="mi_WriteStoryLanguageFiles">Write story-language settings</string>
 
 </resources>
