--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -64,6 +64,9 @@
 	<string name="title_edit_direction">Richtung bearbeiten</string>
 	<string name="err_sr_deprecated">Spiele können nur über das Menu geladen/gespeichert werden!</string>
 	<string name="msg_file_copied_you_may_delete_the_original_now">Datei kopiert. Das Original kann nun gelöscht werden.</string>
-	<string name="mi_WriteStoryLanguageFiles">Schreibe Story-Spracheinstellungen</string>
-
+	<string name="mi_WriteStoryLanguageFiles">Setze Storysprache</string>
+	<string name="storylang_written">Benutze %1$s Story-Einstellungen.</string>
+	<string name="storylang_en">englische</string>
+	<string name="storylang_de">deutsche</string>
+			
 </resources>
